<resources>
    <string name="app_name">Gelderlandplein</string>
    <string name="titel_shops">Laatst gezochte winkels</string>
    <string name="titel_events">Events</string>
    <string name="titel_arts">Arts</string>
    <string name="shoplogo">shopLogo</string>
    <string name="art_title">Lorem ipsem</string>
    <string name="art_logo">artLogo</string>
    <string name="event_title">Event title</string>
    <string name="event_extra_info">Event info</string>
    <string name="event_logo">itemEventLogo</string>
    <string name="search_hint">Search store or product</string>
    <string name="logo">Logo</string>
    <string name="art_titel">Art titel</string>
    <string name="example_adres">Gelderlandplein 47, 1082 KZ Amsterdam</string>

    //the toolbar name of the pages
    <string name="page_art_title">Art</string>
    <string name="shop_title">Shop 1</string>
    <string name="shop_tag">tag</string>
    <string name="shop_description">shopImage</string>
    <string name="start_navigation">Start navigation</string>
    <string name="toolbar_title">toolbar</string>
    <string name="openingstijden">Openingstijden:</string>
    <string name="productenlijst">Productenlijst:</string>
    <string name="shop_name">SHOP NAME</string>
    <string name="connection_message">Navigatie niet mogelijk! Controleer verbinding.</string>
    <string name="search">Search</string>
    <string name="art">Art</string>
    <string name="news_and_events"><![CDATA[News & Events]]></string>
    <string name="shops">Shops</string>
    <string name="show_all">Show all</string>
    <string name="last_seen_shops">Last seen shops</string>
</resources>
