<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_titel_shops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titel_shops"
        android:textSize="24sp"
        android:layout_margin="4dp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_shops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_titel_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titel_events"
        android:textSize="24sp"
        android:layout_margin="4dp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_titel_arts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titel_arts"
        android:textSize="24sp"
        android:layout_margin="4dp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_arts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>